--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,3 +43,44 @@ body {
 .performance-section p {
     color: #fff;
 }
+
+
+/* Hero Section Styling */
+
+.hero-section {
+    background-image: url('your-image1.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    width: 100%;
+    animation: changeBackground 40s infinite;
+}
+
+@keyframes changeBackground {
+    0% {
+        background-image: url('/static/img/covert1.png');
+    }
+    25% {
+        background-image: url('/static/img/covert2.jpeg');
+    }
+    50% {
+        background-image: url('/static/img/covert3.jpg');
+    }
+    75% {
+        background-image: url('/static/img/covert4.jpg');
+    }
+    100% {
+        background-image: url('/static/img/covert.png');
+    }
+}
+
+
+/* تخصيص النصوص */
+
+.hero-section h1 {
+    font-size: 3rem;
+}
+
+.hero-section p {
+    font-size: 1.25rem;
+}
