--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -67,37 +67,43 @@
             <h2 class="text-center mb-4">Popular Topics, Which Are Most Favorite to Students</h2>
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card custom-card">
-                        <img src="/static/img/coding.png" class="card-img-top" alt="Coding">
-                        <div class="card-body">
-                            <h5 class="card-title">Informatique</h5>
-                            <div class="custom-footer">
-                                <span class="badge bg-danger">20 Courses</span>
+                    <a href="page1.html" class="card-link">
+                        <div class="card custom-card">
+                            <img src="/static/img/coding.png" class="card-img-top" alt="Coding">
+                            <div class="card-body">
+                                <h5 class="card-title">Informatique</h5>
+                                <div class="custom-footer">
+                                    <span class="badge bg-danger">20 Courses</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="card custom-card">
-                        <img src="/static/img/clack.png" class="card-img-top" alt="Clack">
-                        <div class="card-body">
-                            <h5 class="card-title">Clack</h5>
-                            <div class="custom-footer">
-                                <span class="badge bg-warning">20 Courses</span>
+                    <a href="page2.html" class="card-link">
+                        <div class="card custom-card">
+                            <img src="/static/img/clack.png" class="card-img-top" alt="Clack">
+                            <div class="card-body">
+                                <h5 class="card-title">Clack</h5>
+                                <div class="custom-footer">
+                                    <span class="badge bg-warning">20 Courses</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4">
-                    <div class="card custom-card">
-                        <img src="/static/img/course.png" class="card-img-top" alt="Courses Academy">
-                        <div class="card-body">
-                            <h5 class="card-title">Courses Academy</h5>
-                            <div class="custom-footer">
-                                <span class="badge bg-success">20 Courses</span>
+                    <a href="page3.html" class="card-link">
+                        <div class="card custom-card">
+                            <img src="/static/img/course.png" class="card-img-top" alt="Courses Academy">
+                            <div class="card-body">
+                                <h5 class="card-title">Courses Academy</h5>
+                                <div class="custom-footer">
+                                    <span class="badge bg-success">20 Courses</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
