--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,23 +2,48 @@ body {
     font-family: Arial, sans-serif;
 }
 
+
+/* تعديل الكارت */
+
 .custom-card {
     border: none;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    /* جعل الكارت قابل للنقر */
+    transition: transform 0.3s ease;
 }
 
+
+/* تقليص حجم الصورة بشكل أكبر */
+
 .custom-card img {
-    height: 150px;
+    /* تقليل الارتفاع ليكون مناسبًا */
+    width: 70%;
+    /* جعل العرض 100% لملء المساحة المتاحة */
     object-fit: cover;
 }
+
+
+/* عند المرور على الكارت */
+
+.custom-card:hover {
+    transform: translateY(-5px);
+    /* تأثير رفع الكارت عند المرور */
+}
+
+
+/* تخصيص البطاقة */
 
 .badge {
     font-size: 0.8rem;
     padding: 0.5em 0.7em;
     border-radius: 10px;
 }
+
+
+/* تصميم الفوتر داخل الكارت */
 
 .custom-footer {
     display: flex;
@@ -28,20 +53,19 @@ body {
     padding-top: 0.5rem;
 }
 
-.performance-section {
-    background: linear-gradient(90deg, #ff9a9e, #fad0c4);
-    padding: 2rem;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+/* روابط الكارت */
+
+.card-link {
+    text-decoration: none;
+    /* إزالة التحديد */
+    color: inherit;
+    /* الاحتفاظ باللون الأصلي */
 }
 
-.performance-section h3 {
-    color: #fff;
-    font-weight: bold;
-}
-
-.performance-section p {
-    color: #fff;
+.card-link:hover {
+    text-decoration: none;
+    /* إزالة التأثير عند المرور */
 }
 
 
